# CP5

./: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirement.txt  requirements.txt
.github/workflows/: ci.yml
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tracker/: admin.py  models.py  pagination.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
tracker/migrations/: 0001_initial.py  0002_habits_last_action_date_alter_habits_time.py  0002_initial.py  0003_alter_habits_time.py  0003_alter_habits_time_alter_habits_time_to_action.py  0003_rename_user_habits_creator.py  0004_alter_habits_time_alter_habits_time_to_action.py  0004_merge_20250204_1741.py  0005_rename_creator_habits_user_alter_habits_time.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_chat_id_user_username_tg.py  0003_alter_user_username_tg.py
