[tool.poetry]
name = "cp5"
version = "0.1.0"
description = ""
authors = ["Alexandr <blix@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pandas = "^2.2.3"
openpyxl = "^3.2.0b1"
flake8 = "^7.1.1"
black = "^25.1.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
mypy = "^1.14.1"
psycopg = "^3.2.4"
psycopg2 = "^2.9.10"
isort = "^6.0.0"
config = "^0.5.1"
iniconfig = "^2.0.0"
django = "^5.1.2"
ipython = "^8.32.0"
pillow = "^11.1.0"
redis = "^5.3.0b4"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.4.0"
coverage = "^7.6.10"
validators = "^0.34.0"
drf-yasg = "^1.21.8"
django-cors-headers = "^4.6.0"
stripe = "^11.5.0"
celery = "^5.5.0rc4"
eventlet = "^0.39.0"
django-celery-beat = "^2.7.0"
nullable = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
