[tool.poetry]
name = "cp5"
version = "0.1.0"
description = ""
authors = ["Alexandr <blix@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
config = "^0.5.1"
django = "^5.1.2"
pillow = "^11.1.0"
redis = "^5.3.0b4"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.4.0"
validators = "^0.34.0"
drf-yasg = "^1.21.8"
django-cors-headers = "^4.6.0"
celery = "^5.5.0rc4"
django-celery-beat = "^2.7.0"
nullable = "^0.2.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.lint.dependencies]
isort = "^6.0.0"
black = "^25.1.0"
flake8 = "^7.1.1"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
